--- a/static/style.css
+++ b/static/style.css
@@ -458,6 +458,7 @@ body {
 .searchBox::placeholder {
 	font-size: 16px;
 	color: gray;
+	bottom: 5px;
 }
 @media screen and (max-width: 992px) {
 	.searchBox::placeholder {
