v$(node -p -e require('../package.json').version)

--- a/static/style.css
+++ b/static/style.css
@@ -328,7 +328,7 @@ body {
 	.nav-link {
 		border-radius: 0px !important;
 		display: flex;
-		flex-direction: column;
+		/* flex-direction: column; */
 	}
 	.topnavlink {
 		flex-direction: unset;
