--- a/static/style.css
+++ b/static/style.css
@@ -268,7 +268,7 @@ body {
 }
 .active {
 	color: white !important;
-	border-radius: 40px;
+	/* border-radius: 40px; */
 	transition-duration: 0.3s;
 	font-weight: 450;
 	background: var(--primaryColor);
