--- a/static/style.css
+++ b/static/style.css
@@ -2,10 +2,10 @@
 	--primaryColor: #a1c398;
 	--bs-nav-pills-link-active-bg: var(--primaryColor) !important;
 }
-html,
+/* html,
 body {
 	scrollbar-gutter: stable;
-}
+} */
 .homeNav {
 	background: white;
 	border-radius: 40px;
@@ -156,29 +156,7 @@ body {
 .cursor-pointer {
 	cursor: pointer !important;
 }
-/* SCROLLBAR */
-::-webkit-scrollbar {
-	width: 6px;
-	background: transparent;
-	transition: 0.3s ease;
-	height: 6px;
-}
 
-::-webkit-scrollbar:hover {
-	width: 6px;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: #71896b;
-	border-radius: 5px;
-	transition: 0.3s ease;
-	height: 10px;
-	width: 3px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background-color: #394636;
-}
 /* ANIMATIONS */
 .anim-scale-down {
 	animation: anim-scale-down 0.1s linear;
@@ -505,36 +483,39 @@ body {
 
 /* SCROLLBAR */
 .no-scrollbar ::-webkit-scrollbar {
-	display: none!important;
+	display: none !important;
 }
 
-::-webkit-scrollbar {
-	width: 3px;
-	background: transparent;
-	transition: 0.3s ease;
-	height: 6px;
+@media screen and (min-width: 992px) {
+	::-webkit-scrollbar {
+		width: 3px;
+		background: transparent;
+		transition: 0.3s ease;
+		height: 6px;
+	}
+
+	::-webkit-scrollbar:hover {
+		width: 3px;
+	}
+
+	/* .branches ::-webkit-scrollbar {
+		display: block;
+	} */
+
+	::-webkit-scrollbar-thumb {
+		background-color: #71896b;
+		border-radius: 5px;
+		transition: 0.3s ease;
+		height: 10px;
+		width: 3px;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #394636;
+	}
 }
 
-::-webkit-scrollbar:hover {
-	width: 3px;
-}
-
-.branches ::-webkit-scrollbar {
-	display: block;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: #71896b;
-	border-radius: 5px;
-	transition: 0.3s ease;
-	height: 10px;
-	width: 3px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background-color: #394636;
-}
-/* END BRANCHES */
+/* END SCROLLBAR */
 
 /* SINGLE DOC PAGE */
 .card {
