v$(node -p -e require('../package.json').version)

--- a/static/style.css
+++ b/static/style.css
@@ -532,7 +532,7 @@ body {
 		margin: 0;
 		padding-top: 0px !important;
 	}
-	.homeNavContainer ul {
+	.homeNav {
 		width: 100dvw;
 		border-radius: 0px;
 		overflow: inherit;
