--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,12 @@ body {
 	margin-top: 1rem;
 }
 
+.card {
+	border: none;
+	box-shadow: 0px 0px 5px #00000012;
+	border-radius: 20px;
+}
+
 @media screen and (min-width: 992px) {
 	.homeNav .active {
 		background-color: var(--primaryColor) !important;
