--- a/static/style.css
+++ b/static/style.css
@@ -43,6 +43,7 @@ body {
 	border: none;
 	box-shadow: 0px 0px 5px #00000012;
 	border-radius: 20px;
+	flex: 1;
 }
 
 @media screen and (min-width: 992px) {
