--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 :root {
 	--primaryColor: #a1c398;
 	--bs-nav-pills-link-active-bg: var(--primaryColor) !important;
@@ -57,7 +59,7 @@ body {
 		/* position: fixed; */
 		width: 100%;
 		bottom: -1px;
-		background-color: unset !important;
+		background-color: #e2e9ef !important;
 		z-index: 99;
 		border-top: 1px solid #dedede;
 		left: 0;
@@ -73,6 +75,14 @@ body {
 @media screen and (max-width: 992px) {
 	.footer {
 		margin-bottom: 50px;
+	}
+	.jumboHeader {
+		background-image: url(https://tekoplast.az/img/docktrbg.png);
+		background-size: cover;
+		background-position: top;
+		background-blend-mode: overlay;
+		color: #075e07;
+		font-family: 'Nunito', sans-serif;
 	}
 }
 @media screen and (max-width: 768px) {
@@ -274,7 +284,6 @@ body {
 	flex-wrap: wrap;
 	flex-direction: column;
 	max-height: 500px;
-	
 }
 
 .branches .card {
