v$(node -p -e require('../package.json').version)

--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,7 @@ body {
 		background-blend-mode: overlay;
 		color: #075e07;
 		font-family: 'Nunito', sans-serif;
+		display: none!important;
 	}
 }
 @media screen and (max-width: 768px) {
