--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
 	--primaryColor: #a1c398;
