--- a/static/style.css
+++ b/static/style.css
@@ -768,7 +768,7 @@ body {
 .midButton {
 	position: relative;
 }
-.midButton a {
+.midButton button {
 	border-radius: 100% !important;
 	box-shadow: 0px 0px 5px #00000024;
 	position: absolute;
