--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
 	--primaryColor: #a1c398;
 	--primaryText: #639057;
 	--bs-nav-pills-link-active-bg: var(--primaryColor) !important;
+	--bs-btn-disabled-bg: #b5d1ad!important;
 }
 html,
 body {
@@ -161,7 +161,7 @@ body {
 	box-shadow: 0px 0px 5px 0px #a1c398a1;
 	color: #678b5e;
 }
-.btn-outline-primary:hover, .btn-outline-primary:disabled  {
+.btn-outline-primary:hover, .btn-outline-primary:disabled, .btn:disabled  {
 	background: var(--primaryColor);
 	color: white;
 }
